--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   border: none;
   padding-left: 15px;
   background-color: #1C1D21;
+  color: white;
   margin-right: 25px;
 }
 .app-body .search-box button {
