--- a/main.scss
+++ b/main.scss
@@ -12,6 +12,8 @@ body {
   background-image: url(https://source.unsplash.com/1600x900/?cloudy);
   background-size: cover;
   background-repeat: no-repeat;
+  width: 100vw;
+  overflow: hidden;
 }
 .app-body {
   max-width: 520px;
@@ -22,7 +24,9 @@ body {
   background-color: #161114;
   color: white;
   //font-weight: 600;
-  opacity: 0.8;
+  opacity: 0.85;
+  min-height: 22rem;
+  position: relative;
   .search-box {
     display: flex;
     justify-content: center;
@@ -68,4 +72,11 @@ body {
       }
     }
   }
+}
+
+@media screen and (max-width:360px) {
+   html{
+     font-size: 80%;
+   }
+  
 }
