--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   background-image: url(https://source.unsplash.com/1600x900/?cloudy);
   background-size: cover;
   background-repeat: no-repeat;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .app-body {
@@ -20,7 +22,9 @@ body {
   border-radius: 20px;
   background-color: #161114;
   color: white;
-  opacity: 0.8;
+  opacity: 0.85;
+  min-height: 22rem;
+  position: relative;
 }
 .app-body .search-box {
   display: flex;
@@ -65,6 +69,12 @@ body {
   display: flex;
   align-items: center;
   font-size: 1.1rem;
+}
+
+@media screen and (max-width: 360px) {
+  html {
+    font-size: 80%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
