--- a/main.scss
+++ b/main.scss
@@ -12,8 +12,8 @@ body {
   background-image: url(https://source.unsplash.com/1600x900/?cloudy);
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100vw;
-  overflow: hidden;
+  // width: 100vw;
+  // overflow: hidden;
 }
 .app-body {
   max-width: 520px;
